--- a/src/styles.css
+++ b/src/styles.css
@@ -100,7 +100,23 @@ form textarea {
   margin: 1%;
 }
 
+form button {
+  width: 40%;
+  align-self:center;
+}
 
+.message {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+.return {
+  border: solid;
+  border-radius: 10%;
+  align-self: center;
+}
 
 .card{
   display: flex;
@@ -184,7 +200,17 @@ tr:nth-child(even) {
   background-color: #dddddd;
 }
 
+.error {
+  margin: 0;
+  padding: 0;
+  
+}
 
+.error p {
+  font-size: x-small;
+  padding: 0;
+  margin: 1%;
+}
   
 .light {
   background-color: #ffffff;
